--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -15,6 +15,8 @@ jobs:
       
     - name: Setup Quarto
       uses: quarto-dev/quarto-actions/setup@v2
+      with:
+        version: '1.2.0'  # Use a specific stable version instead of 'latest'
 
     - name: Render Quarto site
       run: quarto render
